20021019 Math-Evol-1.00 Evolution Search Optimisation