@@ -1,1 +1,3 @@
 20021019 Math-Evol-1.00 Evolution Search Optimisation
+20021020 right version in Install, some doc fixes
+20021021 1.01 select_evol gets step size adjustment the right way round !
